--- a/index.html
+++ b/index.html
@@ -2495,7 +2495,7 @@ Sila hubungi klinik untuk maklumat lanjut. Terima kasih.`;
     const programDate  = (document.getElementById('nadiProgramDate')?.value || new Date().toISOString().slice(0,10)).trim();
 
     // Susunan lajur yang dikehendaki
-    const HEADER = ['TARIKH','NAMA','NO IC','NO TEL','ALAMAT','WT','HT','BP','HR','UMUR','BMI','DXT TYPE','DXT','KELAYAKAN'];
+    const HEADER = ['TARIKH','NAMA','NO IC','NO TEL','ALAMAT','WT','HT','BP','HR','UMUR','BMI','DXT TYPE','DXT','KELAYAKAN PEKA B40'];
 
     // Tajuk program “di tengah” (letak pada kolum tengah baris pertama)
     const midCol   = Math.floor(HEADER.length / 2);
