--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,6 @@ function initGoogleSignIn(){
 
 async function handleCredentialResponse(resp){
   ID_TOKEN = resp.credential;
-  // Semak whoami di backend
   const r = await fetch(SCRIPT_URL, {
     method:'POST',
     headers:{ 'Content-Type':'application/x-www-form-urlencoded' },
@@ -1194,7 +1193,14 @@ async function handleCredentialResponse(resp){
     document.getElementById('staffEmail').textContent = STAFF_EMAIL;
     document.getElementById('signinArea').innerHTML = '';
     document.getElementById('signinAreaDesktop').innerHTML = '';
-    bootstrapApp(); // muat data
+
+    bootstrapApp(); // muat data awal
+
+    // Tambah 3 baris ini
+    location.hash = '#dashboard';
+    const dashLink = document.querySelector('.nav-link[href="#dashboard"]');
+    if (dashLink) dashLink.click();
+
   } else {
     toast('Akses Ditolak', j.message || 'Sila hubungi admin untuk allowlist.', 'danger');
     ID_TOKEN = ''; STAFF_EMAIL = '';
