--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
                   <th style="min-width: 80px;">BMI</th>
                   <th style="width: 80px;">Layak</th>
                   <th style="width: 100px;">Tidak Layak</th>
+                  <th>Remark</th>
                   <th style="min-width: 200px;">TCA & Staff</th>
                   <th style="min-width: 180px;">Tindakan</th>
                 </tr>
