--- a/index.html
+++ b/index.html
@@ -2089,6 +2089,7 @@ function addNadiRow(){
     <td class="text-center">
       <input class="form-check-input nadi-taklayak" type="checkbox">
     </td>
+    <td><input type="text" value="${data.remark || ''}" class="form-control remark-input"></td>
     <td>
       <div class="d-flex gap-1">
         <input type="date" class="form-control form-control-sm nadi-tca-date" disabled style="min-width:100px">
